# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2026 Paul Cutler
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-bambulabs"
description = "A library to interface with a Bambu Labs 3D printer and query status and information"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Paul Cutler", email = "paul@paulcutler.org"}
]
urls = {Homepage = "https://github.com/prcutler/CircuitPython_bambulabs"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "bambulabs",
    "mqtt",
    "circuitpython",
    "bambulabs",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["bambulabs"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
